--- a/package.json
+++ b/package.json
@@ -1,50 +1,78 @@
 {
-  "name": "todo-app",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "json-server": "json-server --watch db.json"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
-  },
-  "devDependencies": {
-    "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~2.0.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
-    "json-server": "^0.9.6",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.0.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.0",
-    "todomvc-app-css": "^2.0.6",
-    "todomvc-common": "^1.0.3",
-    "ts-node": "~2.0.0",
-    "tslint": "~4.5.0",
-    "typescript": "~2.2.0"
-  }
+	"name": "@syncfusion/ej2-angular-schedule",
+	"version": "18.3.51",
+	"description": "Flexible scheduling library with more built-in features and enhanced customization options similar to outlook and google calendar, allowing the users to plan and manage their appointments with efficient data-binding support. for Angular",
+	"author": "Syncfusion Inc.",
+	"license": "SEE LICENSE IN license",
+	"schematics": "./schematics/collection.json",
+	"dependencies": {
+		"@syncfusion/ej2-base": "*",
+		"@syncfusion/ej2-angular-base": "*",
+		"@syncfusion/ej2-schedule": "*",
+		"@types/lodash": "4.14.159",
+		"@types/node": "11.15.20"
+	},
+	"devDependencies": {
+		"rxjs": "5.0.0 - 5.5.10",
+		"zone.js": "0.7.2 - 0.8.26",
+		"core-js": "2.4.1 - 2.6.6",
+		"reflect-metadata": "0.1.9 - 0.1.15 ",
+		"@angular/common": "2.2.1 - 4.10.0",
+		"@angular/compiler": "2.2.1 - 4.10.0",
+		"@angular/core": "2.2.1 - 4.10.0",
+		"@angular/forms": "2.2.1 - 4.10.0",
+		"@angular/http": "2.2.1 - 4.10.0",
+		"@angular/platform-browser": "2.2.1 - 4.10.0",
+		"@angular/platform-browser-dynamic": "2.2.1 - 4.10.0",
+		"@angular/router": "2.2.1 - 4.10.0",
+		"@angular/compiler-cli": "2.2.1 - 4.10.0",
+		"@angular/platform-server": "2.2.1 - 4.10.0",
+		"@angular-devkit/schematics": "0.7.2",
+		"@schematics/angular": "0.7.2",
+		"es6-module-loader": "^0.17.11",
+		"rollup": "^0.41.6",
+		"rollup-plugin-uglify": "^1.0.1",
+		"systemjs": "^0.19.40",
+		"systemjs-plugin-babel": "0.0.17",
+		"ng-packagr": "1.5.0",
+		"tsickle": "0.34.0",
+		"es6-promise": "^3.2.1",
+		"gulp": "^3.9.1",
+		"gulp-sass": "^3.1.0",
+		"gulp-typescript": "^3.1.6",
+		"requirejs": "^2.3.3",
+		"typescript": "2.3.4"
+	},
+	"keywords": [
+		"ej2",
+		"syncfusion",
+		"web-components",
+		"schedule",
+		"resources",
+		"multiple-resources",
+		"grouping",
+		"views",
+		"calendar",
+		"appointments",
+		"events",
+		"tasks",
+		"recurrence",
+		"data-binding",
+		"timezone",
+		"recurrence-editor",
+		"agenda",
+		"angular",
+		"ng",
+		"ng-schedule",
+		"ej2-ng-schedule",
+		"angular-schedule"
+	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/syncfusion/ej2-angular-ui-components.git"
+	},
+	"scripts": {
+		"build": "gulp build"
+	},
+	"sideEffects": true
 }
